--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,11 @@ font-size: 16px;
 line-height: 1.1;
 letter-spacing: 0.03em;
 }
+.social-item{
+    display: inline-block;
+    margin-right: 10px;
+    margin-top: 16px;
+}
 /*Footer*/
 .footer{
 padding-top: 60px;
@@ -312,6 +317,14 @@ letter-spacing: 0.03em;
 color: var(--footer-contact);
 font-style: normal;
 }
+.social-text{
+    margin-bottom: 20px;
+    
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
 
 /*Портфолио*/
 .portfolio-hero{
@@ -406,4 +419,9 @@ font-family: Roboto;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.87;
+}
+.social-text{
+    margin-top: 72px;
+    margin-left: 516px;
+
 }
