--- a/css/styles.css
+++ b/css/styles.css
@@ -103,13 +103,23 @@ ul {
 .mail-link{
     color: var(--primary-text-color);
 }
-.mail-link-active{
+
+.mail-link:hover,
+.mail-link:focus,
+.tel-link:hover,
+.tel-link:focus
+{
     color: var(--accent-color);
+}
+
+.contact-icon:hover,
+.contact-icon:focus{
+    fill: var(--accent-color);
 }
 .nav-link:hover,
 .nav-link:focus,
-.contact-list:hover,
-.contact-list:focus {
+.contact-list-item:hover,
+.contact-list-item:focus {
     color: var(--accent-color);
 }
 .site-nav .list-item:not(:last-child) {
@@ -118,7 +128,6 @@ ul {
 .contact-icon{
     margin-right: 10px;
 }
-
 .header .container .list {
     justify-content: flex-end;
 }
@@ -181,18 +190,18 @@ text-transform: uppercase;
     padding-top: 94px;
     padding-bottom: 94px;
 }
+.advantage-icon-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    border-radius: 4px;
+    height: 120px;
+    width: 270px;
+    background-color: var(--quaternary-background-color);
+}
 .advantage-icon{
-content: "";
-height: 120px;
-width: 270px;
-display: inline-block;
-margin-bottom: 30px;
-border-radius: 4px;
-
-background-size: contain;
-background-repeat: no-repeat;
-background-position: center;
-background-color: var(--quaternary-background-color);
+    display: block;
 }
 .advantage-list{
     display: flex;
@@ -218,7 +227,7 @@ background-color: var(--quaternary-background-color);
 .about{
     padding-bottom: 94px;
 }
-.about-heading, .team-title{
+.about-heading, .team-title, .client-section-heading{
 color: var(--secondary-text-color);
 
 margin-bottom: 50px;
@@ -243,7 +252,6 @@ justify-content: space-between;
 }
 .team .list{
 display: flex;
-
 }
 .team .item {
     padding-bottom: 30px;
@@ -265,6 +273,8 @@ display: flex;
 }
 .team .item{
     background-color: var(--primary-background-color);
+    border-radius: 0px 0px 4px 4px;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .team-member-occupation{
 color: var(--primary-text-color);
@@ -274,10 +284,73 @@ font-size: 16px;
 line-height: 1.1;
 letter-spacing: 0.03em;
 }
-.social-item{
-    display: inline-block;
+.social-list {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.social-item {
+    width: 44px;
+    height: 44px;
+}
+.social-item:not(:last-child) {
     margin-right: 10px;
-    margin-top: 16px;
+}
+.social-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+.social-icon{
+    fill: #afb1b8
+}
+.social-link:hover,
+.social-link:focus {
+    background-color: var(--accent-color);
+}
+.social-link:hover .social-icon,
+.social-link:focus .social-icon {
+    fill: var(--primary-background-color);
+}
+/*Clients*/
+.clients{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+.client-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin-top: 52px;
+    justify-content: space-between;
+}
+
+.client-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 170px;
+    height: 92px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+}
+
+.client-icon {
+    fill: #afb1b8;
+}
+
+.client-link:hover,
+.client-link:focus {
+    border-color: var(--accent-color);
+}
+
+.client-link:hover .client-icon,
+.client-link:focus .client-icon {
+    fill: var(--accent-color);
 }
 /*Footer*/
 .footer{
@@ -317,6 +390,9 @@ letter-spacing: 0.03em;
 color: var(--footer-contact);
 font-style: normal;
 }
+.footer-flex {
+    display: flex;
+}
 .social-text{
     margin-bottom: 20px;
     
@@ -324,8 +400,25 @@ font-style: normal;
     text-transform: uppercase;
     color: #ffffff;
 }
+.footer-social .social-icon {
+    fill: var(--primary-background-color);
+}
 
+.footer-social .social-link {
+    background-color: rgba(255, 255, 255, 0.1);
+}
 
+.footer-social .social-link:hover,
+.footer-social .social-link:focus {
+    background-color: var(--accent-color);
+}
+.footer-address-container {
+    margin-right: 70px;
+}
+.footer-social-container{
+    align-items: baseline;
+    padding-top: 12px;
+}
 /*Портфолио*/
 .portfolio-hero{
 background-color: var(--primary-background-color);
@@ -402,6 +495,7 @@ padding-bottom: 94px;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
     padding: 20px 24px;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .project-name{
     color: var(--secondary-text-color);
@@ -419,9 +513,4 @@ font-family: Roboto;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.87;
-}
-.social-text{
-    margin-top: 72px;
-    margin-left: 516px;
-
 }
