--- a/css/styles.css
+++ b/css/styles.css
@@ -99,29 +99,25 @@ ul {
 .nav-link-active{
     color: var(--accent-color);
 }
-.tel-link,
-.mail-link{
+.contact-link {
+    display: flex;
+    align-items: center;
+
     color: var(--primary-text-color);
 }
 
-.mail-link:hover,
-.mail-link:focus,
-.tel-link:hover,
-.tel-link:focus
-{
+.nav-link:hover,
+.nav-link:focus,
+.contact-link:hover,
+.contact-link:focus {
     color: var(--accent-color);
 }
 
-.contact-icon:hover,
-.contact-icon:focus{
+.contact-link:hover .contact-icon,
+.contact-link:focus .contact-icon {
     fill: var(--accent-color);
 }
-.nav-link:hover,
-.nav-link:focus,
-.contact-list-item:hover,
-.contact-list-item:focus {
-    color: var(--accent-color);
-}
+
 .site-nav .list-item:not(:last-child) {
     margin-right: 50px;
 }
@@ -189,6 +185,7 @@ text-transform: uppercase;
     color: var(--primary-text-color);
     padding-top: 94px;
     padding-bottom: 94px;
+    
 }
 .advantage-icon-container{
     display: flex;
@@ -199,6 +196,10 @@ text-transform: uppercase;
     height: 120px;
     width: 270px;
     background-color: var(--quaternary-background-color);
+    
+}
+.advantage{
+    margin-right: 30px;
 }
 .advantage-icon{
     display: block;
@@ -211,7 +212,7 @@ text-transform: uppercase;
 }
 .advantage .content{
     width: 270px;
-    margin-right: 30px;
+    
 }
 .advantage-title{
     margin-bottom: 10px;
@@ -283,6 +284,7 @@ font-weight: 400;
 font-size: 16px;
 line-height: 1.1;
 letter-spacing: 0.03em;
+margin-bottom: 16px;
 }
 .social-list {
     display: flex;
@@ -304,6 +306,7 @@ letter-spacing: 0.03em;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    background-color: #FFFFFF;
 }
 .social-icon{
     fill: #afb1b8
@@ -489,13 +492,16 @@ padding-bottom: 94px;
     flex-basis: calc((100% - 90px) / 3);
     background-color: #FFFFFF;
 }
-
+.project-card:hover,
+.project-card:focus{
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 .card-description {
     border-bottom: 1px solid #EEEEEE;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
     padding: 20px 24px;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    
 }
 .project-name{
     color: var(--secondary-text-color);
@@ -514,3 +520,4 @@ font-weight: 400;
 font-size: 16px;
 line-height: 1.87;
 }
+
